fix slogan on small devices

--- a/resources/public/stylesheets/screen.css
+++ b/resources/public/stylesheets/screen.css
@@ -931,6 +931,7 @@ nav:after {
     max-width: 28.8em;
     padding-left: 1.8em;
     padding-right: 1.8em;
+    padding-bottom: 0;
     margin-left: auto;
     margin-right: auto;
   }
@@ -1243,7 +1244,8 @@ nav .mobile-nav-button img {
   }
   /* line 334, ../_sass/screen.scss */
   .hero-description h1, .hero-example h1 {
-    margin-bottom: 0.7em;
+    margin-bottom: 1.1em;
+    font-size: 1.7em;
   }
 
   /* line 340, ../_sass/screen.scss */
